# Aura-Conformance-Kit

./: pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: DECISIONS.md
tests/: test_certificate_generator.py
